# leet-code-9000

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
src/leet_code_9000/: 1.two-sum.py  1108.defanging-an-ip-address.py  1114.print-in-order.py  1154.day-of-the-year.py  121.best-time-to-buy-and-sell-stock.py  1232.check-if-it-is-a-straight-line.py  13.roman-to-integer.py  1323.maximum-69-number.py  136.single-number.py  1365.how-many-numbers-are-smaller-than-the-current-number.py  1374.generate-a-string-with-characters-that-have-odd-counts.py  14.longest-common-prefix.py  1408.string-matching-in-an-array.py  1470.shuffle-the-array.py  1480.running-sum-of-1-d-array.py  169.majority-element.py  172.factorial-trailing-zeroes.py  182.duplicate-emails.sql  190.reverse-bits.py  191.number-of-1-bits.py  195.tenth-line.bash  198.house-robber.py  2.add-two-numbers.py  20.valid-parentheses.py  204.count-primes.py  21.merge-two-sorted-lists.py  217.contains-duplicate.py  231.power-of-two.py  26.remove-duplicates-from-sorted-array.py  27.remove-element.py  28.implement-str-str.py  283.move-zeroes.py  344.reverse-string.py  345.reverse-vowels-of-a-string.py  35.search-insert-position.py  412.fizz-buzz.py  46.permutations.py  58.length-of-last-word.py  595.big-countries.sql  627.swap-salary.sql  (+6 more)
src/python-built-in/: custom.iterator.like.c.py  itertools.permutations.py
tests/: test_leet_code_9000.py
