[tool.poetry]
name = "leet-code-9000"
version = "0.1.0"
description = "Personal repository for leet code challenges"
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Corfucinas/leet-code-9000"
keywords = ["leetcode", "repository", "challenges", "coding"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.15.2"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
flake8-black = "^0.2.0"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.12.1"
xdoctest = "^0.15.4"
flake8-bandit = "^2.1.2"
darglint = "^1.8.0"
nox = "^2020.12.31"
vulture = "^2.3"
radon = "^4.5.0"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
