[tool.poetry]
name = "leet-code-9000"
version = "0.1.0"
description = "Personal repository for leet code challenges"
authors = ["Pedro Torres <corfucinas@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Corfucinas/leet-code-9000"
keywords = ["leetcode", "repository", "challenges", "coding"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.910"
black = "^21.11b1"
isort = "^5.9.3"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
flake8-black = "^0.2.3"
flake8-docstrings = "^1.6.0"
pre-commit = "^2.15.0"
xdoctest = "^0.15.10"
flake8-bandit = "^2.1.2"
darglint = "^1.8.0"
nox = "^2021.10.1"
vulture = "^2.3"
radon = "^5.1.0"

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
